--- a/DisplayView/DisplayView.csproj
+++ b/DisplayView/DisplayView.csproj
@@ -174,6 +174,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\GetDataFromDB.cshtml" />
+    <Content Include="Views\Home\GetAllData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
