used TempData to pass data from controller to view

--- a/DisplayView/DisplayView.csproj
+++ b/DisplayView/DisplayView.csproj
@@ -175,6 +175,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\GetDataFromDB.cshtml" />
     <Content Include="Views\Home\GetAllData.cshtml" />
+    <Content Include="Views\Home\GetDataFromDBUsingTempData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
