added a redirect to my view in which TempData was used to generate the data from the controller to the view

--- a/DisplayView/DisplayView.csproj
+++ b/DisplayView/DisplayView.csproj
@@ -176,6 +176,7 @@
     <Content Include="Views\Home\GetDataFromDB.cshtml" />
     <Content Include="Views\Home\GetAllData.cshtml" />
     <Content Include="Views\Home\GetDataFromDBUsingTempData.cshtml" />
+    <Content Include="Views\Home\SecondGetDataFromDBUsingTempData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
